force-app/main/default/objects/ServiceContract/fields/HRCSVC_ERP_Status__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_ERP_Status__c</fullName>
    <label>ERP Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>10 - Quote Submitted</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>15 - Contract Accepted</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>20 - Quote Rejected</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>30 - Active Contract</label>
            </value>
            <value>
                <fullName>35</fullName>
                <label>35 - Active Contract</label>
            </value>
            <value>
                <fullName>38</fullName>
                <label>38 - Reconfigured</label>
            </value>
            <value>
                <fullName>40</fullName>
                <label>40 - Renewal Letter Sent</label>
            </value>
            <value>
                <fullName>41</fullName>
                <label>41 - Essential Over Spent</label>
            </value>
            <value>
                <fullName>42</fullName>
                <label>42 - Essential Expired</label>
            </value>
            <value>
                <fullName>45</fullName>
                <label>45 - Interim Billing - MTM</label>
            </value>
            <value>
                <fullName>50</fullName>
                <label>50 - USE FOR RETAINER/EXTENDED/PROJ</label>
            </value>
            <value>
                <fullName>51</fullName>
                <label>51 - CANCEL Budget</label>
            </value>
            <value>
                <fullName>53</fullName>
                <label>53 - CANCEL Competition</label>
            </value>
            <value>
                <fullName>54</fullName>
                <label>54 - CANCEL In House</label>
            </value>
            <value>
                <fullName>55</fullName>
                <label>55 - CANCEL New Products</label>
            </value>
            <value>
                <fullName>57</fullName>
                <label>57 - CANCEL Unresponsive</label>
            </value>
            <value>
                <fullName>58</fullName>
                <label>58 - CANCEL Margin</label>
            </value>
            <value>
                <fullName>60</fullName>
                <label>60 - CANCEL IDN</label>
            </value>
            <value>
                <fullName>61</fullName>
                <label>61 - SUSPEND - Delay at Hospital</label>
            </value>
            <value>
                <fullName>73</fullName>
                <label>73 - CANCEL Watch Child</label>
            </value>
            <value>
                <fullName>74</fullName>
                <label>74 - CANCEL Communications</label>
            </value>
            <value>
                <fullName>76</fullName>
                <label>76 - CANCEL - Customer unsatisfied</label>
            </value>
            <value>
                <fullName>80</fullName>
                <label>80 - CFCM Deactivation</label>
            </value>
            <value>
                <fullName>97</fullName>
                <label>97 - Contract Complete</label>
            </value>
            <value>
                <fullName>98</fullName>
                <label>98 - Renewed</label>
            </value>
            <value>
                <fullName>99</fullName>
                <label>99 - Deleted</label>
            </value>
            <value>
                <fullName>CH</fullName>
                <label>CH - CUSTOMER CREDIT HOLD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>