force-app/main/default/objects/ServiceContract/fields/HRCSVC_ERP_Status_New__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_ERP_Status_New__c</fullName>
    <formula>IF(OR(ISPICKVAL(HRCSVC_ERP_Status__c,&apos;35&apos;),ISPICKVAL(HRCSVC_ERP_Status__c,&apos;45&apos;)),&apos;Active&apos;,TEXT(HRCSVC_ERP_Status__c))</formula>
    <label>Service Contract Status</label>
    <type>Text</type>
</CustomField>