force-app/main/default/objects/ServiceContract/fields/HRCSVC_Location__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Service Contracts</relationshipLabel>
    <relationshipName>Service_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>